--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>About | Yugam Arora</title>
+    <link rel="icon" type="image/png" href="favicon1.png">
     <link rel="stylesheet" href="about.css">
     <script src="script.js" defer></script>
 
@@ -25,7 +26,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <button class="resume">Resume</button>
+        <a href="resume.pdf" target="_blank"><button class="resume">Resume</button></a>
     </header>
 
 <section>
@@ -41,6 +42,23 @@
         </div>
     </center>
     </div>
+</section>
+
+<br><br>
+<hr>
+
+<section>
+<div class="firstdiv">
+    <h2 class="aboutme">ABOUT ME</h2>
+    <p>You can center a div in a few different ways in CSS. While it’s easy to center a div horizontally
+        on a page, it’s trickier to do so vertically (but still manageable!).
+
+        We’ll walk through both these methods below, and then explain how you can center a div horizontally and
+        vertically or center a div within another div.</p>
+</div>
+<div>
+    
+</div>
 </section>
 
 
