--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Home | Yugam Arora</title>
+  <link rel="icon" type="image/png" href="favicon1.png">
+  <link rel="stylesheet"type="text/css" href="style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 </head>
@@ -14,8 +15,10 @@
 
   <div class="a">
     <div class="child">
-      <center>
-        <img draggable="false" src="profileimg.jpeg">
+      <div id="photo">
+        <img id = "profilepic" draggable="false" src="profileimg.jpeg">
+      </div>
+      <div id="subject">
         <h2 id="title">Yugam Arora</h2>
         <p id="subtitle">Web Developer</p><br><br>
         <p id="para">You can center a div in a few different ways in CSS. While it’s easy to center a div horizontally
@@ -27,12 +30,8 @@
         <p class="menu"><a href="about.html">About</a></p>
         <p class="menu"><a href="#">Project</a></p>
         <p class="menu"><a href="#"> Contact</p>
-      </center>
+      </div>
     </div>
-  </div>
-
-  <div class="footer">
-    <p id="footer">© Yugam Arora, 2021</p>
   </div>
 
 </body>
